--- a/src/devplex.GitServer.Web/Web.config
+++ b/src/devplex.GitServer.Web/Web.config
@@ -3,12 +3,7 @@
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
-  <configSections>
-    <section name="devplex.GitServer" type="devplex.GitServer.Core.Configuration.GitServerSection, devplex.GitServer.Core" />
-  </configSections>
-
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -16,45 +11,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-
-  <devplex.GitServer repositoryPath="D:\GitRoot" useSsl="true">
-    <viewers fallbackViewerType="devplex.GitServer.Mvc.Viewers.CodeViewer, devplex.GitServer.Mvc">
-      <viewer type="devplex.GitServer.Mvc.Viewers.MarkdownViewer, devplex.GitServer.Mvc">
-        <extensions>
-          <add extension=".md" />
-          <add extension=".markdown" />
-        </extensions>
-      </viewer>
-      <viewer type="devplex.GitServer.Mvc.Viewers.ImageViewer, devplex.GitServer.Mvc">
-        <extensions>
-          <add extension=".png" />
-          <add extension=".gif" />
-          <add extension=".jpg" />
-          <add extension=".jpeg" />
-        </extensions>
-      </viewer>
-    </viewers>
-    <binaries>
-      <add extension=".exe" />
-      <add extension=".dll" />
-      <add extension=".pdf" />
-      <add extension=".ppt" />
-      <add extension=".pptx" />
-      <add extension=".doc" />
-      <add extension=".docx" />
-      <add extension=".xls" />
-      <add extension=".xlsx" />
-      <add extension=".snk" />
-      <add extension=".ico" />
-    </binaries>
-  </devplex.GitServer>
-
   <system.web>
-
-    <httpRuntime targetFramework="4.5" maxRequestLength="209715200" executionTimeout="7200" />
-
     <compilation debug="true" targetFramework="4.5" />
-
+    <httpRuntime targetFramework="4.5" />
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -63,38 +22,20 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
-      </namespaces>
+      </namespaces>     
     </pages>
-
-    <identity impersonate="true" />
   </system.web>
-
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-    <modules runAllManagedModulesForAllRequests="true" />
-
-    <security>
-      <requestFiltering>
-        <requestLimits maxAllowedContentLength="209715200" />
-        <hiddenSegments>
-          <clear />
-        </hiddenSegments>
-        <fileExtensions>
-          <clear />
-        </fileExtensions>
-      </requestFiltering>
-    </security>
-  </system.webServer>
+    
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
-      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
@@ -111,7 +52,14 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-
 </configuration>
